@@ -30,6 +30,7 @@ Module::Build     = 0.4004
 
 [Prereqs / TestRequires]
 version           = 0.88
+Capture::Tiny     = 0.30
 File::pushd       = 1.00
 Module::Build     = 0.4004
 Path::Tiny        = 0.013
