@@ -1,7 +1,8 @@
 Revision history for File::DataClass
 
+          - Proxy fdopen on io_handle
           - Added more tests
-          - IO constructor without args create a new IO::Handle
+          - IO constructor without args creates a new IO::Handle
           - Toolchain update
 
 0.66.1    2015-08-29 09:58:19
